@@ -472,6 +472,8 @@
             
             <div class="ng-scope inline-object">
               <button class="wvButton--underline text-center"
+                      v-bind:class="{ active: (annotationsCurrentAction == stone.WebViewerAction.CREATE_SEGMENT) }"
+                      v-on:click="SetAnnotationsAction(stone.WebViewerAction.CREATE_SEGMENT)"
                       data-toggle="tooltip" data-title="Measure length">
                 <i class="fas fa-arrows-alt-h"></i>
               </button>
@@ -479,6 +481,8 @@
 
             <div class="ng-scope inline-object">
               <button class="wvButton--underline text-center"
+                      v-bind:class="{ active: (annotationsCurrentAction == stone.WebViewerAction.CREATE_ANGLE) }" 
+                      v-on:click="SetAnnotationsAction(stone.WebViewerAction.CREATE_ANGLE)"
                       data-toggle="tooltip" data-title="Measure angle">
                 <i class="fas fa-angle-left fa-lg"></i>
               </button>
@@ -486,8 +490,19 @@
 
             <div class="ng-scope inline-object">
               <button class="wvButton--underline text-center"
+                      v-bind:class="{ active: (annotationsCurrentAction == stone.WebViewerAction.CREATE_CIRCLE) }" 
+                      v-on:click="SetAnnotationsAction(stone.WebViewerAction.CREATE_CIRCLE)"
                       data-toggle="tooltip" data-title="Measure circle">
                 <i class="far fa-circle"></i>
+              </button>
+            </div>
+
+            <div class="ng-scope inline-object">
+              <button class="wvButton--underline text-center"
+                      v-bind:class="{ active: (annotationsCurrentAction == stone.WebViewerAction.REMOVE_MEASURE) }" 
+                      v-on:click="SetAnnotationsAction(stone.WebViewerAction.REMOVE_MEASURE)"
+                      data-toggle="tooltip" data-title="Delete measurement">
+                <i class="fas fa-trash"></i>
               </button>
             </div>
 
