@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* New tools for annotations: segment length, circle, angle and eraser
 * Patient birth date is now displayed in the overlays
 * New argument "token" to set HTTP header "Authorization: Bearer <token>"
   for each request to the DICOMweb server
